[package]
name = "kripton-qr-reader"
version = "0.1.4"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] } 
image = { version = "0.25", features = ["webp"] }
rqrr = "0.10"  
zeroize = { version = "1.8", features = ["derive"] } 
anyhow = "1.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
dirs = "6.0"
arboard = { version = "3"}
